2008-09-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c: Use g_hash_table_new_full() so that
	we don't have to g_hash_table_foreach() to remove all user-id
	hints before destroying the user-id hint hashtable.

	* util/cache.c: Updated to use GSlice instead of a custom MemChunk
	allocator.

	* util/gtrie.c: Updated to use GSlice instead of my custom
	MemChunk. The main purpose of using MemChunk had been for ease of
	cleanup, but it made it more difficult to use GTrie elsewhere.

	* examples/basic-example.c: Updated for the foreach() changes.

	* gmime/gmime-multipart.c (g_mime_multipart_foreach): Changed to
	be recursive. The callback function signature has changed a bit to
	be more useful as well by providing the parent MIME object.

	* gmime/gmime-message.c (g_mime_message_foreach): Same.

2008-09-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-multipart.c (g_mime_multipart_get_subpart_from_content_id):
	Multiparts can have Content-Id's too.

2008-09-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-part.c (g_mime_part_set_content_object): Made
	virtual, seems like it could be useful.

	* gmime/gmime-object.c (set_content_type): Do not serialize the
	GMimeContentType object to the headers. This is done elsewhere
	now.
	(g_mime_object_set_content_type): After calling the virtual
	set_content_type(), serialize the GMimeContentType object to the
	headers.

	* gmime/gmime-multipart-encrypted.c: Get rid of the protocol
	member variable, it's not needed.

	* gmime/gmime-multipart-signed.c: Get rid of the protocol and
	micalg member strings, these aren't needed - just request them
	from the content_type.

	* gmime/gmime-multipart.c: Get rid of boundary member variable, we
	can just request it from the ContentType object. No sense
	duplicating strings.

	* gmime/gmime-message.c (message_get_headers): Don't write out a
	MIME-Version header if a Content-Type header doesn't exist.
